# py-auth

./: .gitignore  README.md  main.py  makefile  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
examples/: github_app.py  password_app.py
src/pyauth/: __init__.py  pyauth.py  session.py  token.py
src/pyauth/models/: __init__.py  account.py  model.py  role.py  session.py  token.py
src/pyauth/permissions/: RBAC.py  __init__.py  permissions.py
src/pyauth/providers/: __init__.py  payload.py  provider.py
src/pyauth/providers/oauth/: __init__.py  github.py  google.py  oauth_provider.py  payload.py
src/pyauth/providers/password/: password.py  payload.py
src/pyauth/storage/: __init__.py  sql.py  sqlite.py  storage.py
src/tests/: conftest.py  test_pyauth_sessions_with_password.py
src/tests/permissions/: test_rbac_permissions.py
src/tests/providers/: test_oauth_providers.py  test_password_provider.py
src/tests/storage/: test_sqlite_storage.py  test_storage_base.py
src/tests/unit/: test_token.py
