[project]
name = "py-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "bcrypt>=4.3.0",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "ruff",
    "black",
    "mypy",
    "bandit",
    "safety"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyauth*"]
exclude = ["tests*"] 
